--- a/src/app/Components/auth/profile/profile.html
+++ b/src/app/Components/auth/profile/profile.html
@@ -21,8 +21,13 @@
 
                 <div class="weight-container" style="display: flex; gap: 16px;">
                     <mat-form-field style="flex: 1;">
-                        <mat-label>Weight</mat-label>
-                        <input type="number" matInput placeholder="Weight" formControlName="weight">
+                        <mat-label>Current Weight</mat-label>
+                        <input type="number" matInput placeholder="Current Weight" formControlName="currentWeight">
+                    </mat-form-field>
+
+                    <mat-form-field style="flex: 1;">
+                        <mat-label>Goal Weight</mat-label>
+                        <input type="number" matInput placeholder="Goal Weight" formControlName="goalWeight">
                     </mat-form-field>
 
                     <mat-form-field style="width: 100px;">
