--- a/src/app/Components/training/training/training.html
+++ b/src/app/Components/training/training/training.html
@@ -6,6 +6,9 @@
   <mat-tab label="Past Training">
     <app-past-training />
   </mat-tab>
+  <mat-tab label="Analytics">
+    <app-training-analytics />
+  </mat-tab>
 </mat-tab-group>
 } @else {
 <app-current-training />
