--- a/src/app/Components/welcome/welcome.html
+++ b/src/app/Components/welcome/welcome.html
@@ -5,7 +5,7 @@
   </figure>
 
   <div class="welcome__grid">
-    <article class="welcome__card">
+    <article class="welcome__card welcome__card--clickable" routerLink="/training" [queryParams]="{tab: 1}">
       <h1>ACTIVITY</h1>
       <p>Stay active and enjoy better health and more fun!</p>
     </article>
